src/test/deca/syntax/invalid/6_decl_var_manque_ident.deca
// Description:
//    tests de non-terminal 'decl_var' ne manque le 'ident'.
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
     =6;

}